--- a/styles/index.css
+++ b/styles/index.css
@@ -21,8 +21,8 @@ h2 {
 
 #red-die {
   border: solid;
-  border-radius: 5px;
   border-width: 5px;
+  border-radius: 5px;
   border-color: yellow;
 }
 
@@ -40,8 +40,10 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: solid 5px;
+  border: solid;
+  border-width: 5px;
   border-radius: 10px;
+  border-color: black;
   padding: 10px;
   background-color: whitesmoke;
 }
@@ -82,8 +84,8 @@ h2 {
 
 #result-pop-up {
   position: fixed;
-  top: 0px;
-  left: 0px;
+  top: 0;
+  left: 0;
   height: 100vh;
   width: 100vw;
   z-index: 1000;
@@ -93,11 +95,13 @@ h2 {
 
 #pop-up-box {
   position: absolute;
-  left: 50%;
   top: 50%;
+  left: 50%;
   transform: translate(-50%, -50%);
   padding: 10px;
   border: solid;
-  background-color: whitesmoke;
+  border-width: 5px;
   border-radius: 10px;
+  border-color: black;
+  background-color: whitesmoke;
 }
