Add author name

--- a/views/index.html
+++ b/views/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     <header>
-        <h1>Dice Game</h1>
+        <h1>Lucky Dice</h1>
+        <b>Mini Dice Game by Nicholas Chan</b>
     </header>
     <main>
         <section id="dice-selection">
