--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap");
+* {
+  font-family: Roboto;
+}
+
 body {
   background-image: url(../images/green-felt-background.jpeg);
   background-repeat: no-repeat;
@@ -9,31 +14,74 @@ header {
   text-align: center;
 }
 
+h1 {
+  font-family: Bebas Neue;
+  font-size: 3.5em;
+  color: rgb(159, 0, 0);
+  margin-top: 0.4em;
+  margin-bottom: 0.4em;
+}
+
+#author {
+  color: whitesmoke;
+}
+
 main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 1em;
 }
 
 h2 {
+  font-size: 1.75em;
   text-align: center;
+  margin-top: 0.7em;
+  margin-bottom: 0.7em;
+}
+
+b {
+  font-size: 1.25em;
 }
 
 #red-die {
   border: solid;
   border-width: 5px;
   border-radius: 5px;
-  border-color: yellow;
+  border-color: rgb(231, 231, 0);
 }
 
 #blue-die {
   margin: 5px;
 }
 
+#dice-game {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 #game-panels {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+#dice-selection {
+  margin-bottom: 1.5em;
+}
+
+#round-counter-div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 20%;
+}
+
+#dice-colors {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .dice-panel {
@@ -45,17 +93,19 @@ h2 {
   border-radius: 10px;
   border-color: black;
   padding: 10px;
-  background-color: whitesmoke;
+  background-color: rgba(245, 245, 245, 0.7);
 }
 
 .dice {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .dice-img {
-  width: 100px;
+  min-width: 85px;
+  max-width: 130px;
+  width: 33%;
 }
 
 .scores {
@@ -70,16 +120,50 @@ h2 {
   align-items: center;
 }
 
+.round-score {
+  margin-right: 15px;
+}
+
 #game-controls {
   display: flex;
   flex-direction: row;
-  justify-content: center;
+  justify-content: space-around;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  width: 50%;
+}
+
+#text-tips {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 80%;
 }
 
 .text-header {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+#new-game, #roll-dice {
+  border: solid;
+  border-width: 3px;
+  border-radius: 5px;
+  border-color: rgb(159, 0, 0);
+  padding: 5px;
+  width: 30%;
+}
+
+#how-to-play, #rules {
+  border: solid;
+  border-width: 5px;
+  border-radius: 10px;
+  border-color: black;
+  padding: 10px;
+  background-color: rgba(245, 245, 245, 0.7);
+  margin: 15px;
+  width: 45%;
 }
 
 #result-pop-up {
@@ -89,7 +173,7 @@ h2 {
   height: 100vh;
   width: 100vw;
   z-index: 1000;
-  background-color: rgba(245, 245, 245, 0.567);
+  background-color: rgba(245, 245, 245, 0.5);
   opacity: 0;
 }
 
@@ -102,6 +186,6 @@ h2 {
   border: solid;
   border-width: 5px;
   border-radius: 10px;
-  border-color: black;
+  border-color: rgb(159, 0, 0);
   background-color: whitesmoke;
 }
