--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,4 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;700&display=swap');
+
 // variables
+$black: black;
+$white: whitesmoke;
+$red: rgb(159, 0, 0);
+$yellow: rgb(231, 231, 0);
+$white-background: rgba(245, 245, 245, 0.700);
 
 @mixin flex-display($display, $flex-direction) {
     display: $display;
@@ -18,6 +25,10 @@
     left: $left;
 }
 
+* {
+    font-family: Roboto;
+}
+
 body {
     background-image: url(../images/green-felt-background.jpeg);
     background-repeat: no-repeat;
@@ -29,21 +40,46 @@ header {
     text-align: center;
 }
 
+h1 {
+    font-family: Bebas Neue;
+    font-size: 3.5em;
+    color: $red;
+    margin-top: 0.4em;
+    margin-bottom: 0.4em;
+}
+
+#author {
+    color: $white;
+}
+
 main {
     @include flex-display(flex, column);
     align-items: center;
+    margin-top: 1em;
 }
 
 h2 {
+    font-size: 1.75em;
     text-align: center;
+    margin-top: 0.7em;
+    margin-bottom: 0.7em;
+}
+
+b {
+    font-size: 1.25em
 }
 
 #red-die {
-    @include border-style(solid, 5px, 5px, yellow);
+    @include border-style(solid, 5px, 5px, $yellow);
 }
 
 #blue-die {
     margin: 5px;
+}
+
+#dice-game {
+    @include flex-display(flex, column);
+    align-items: center;
 }
 
 #game-panels {
@@ -51,21 +87,38 @@ h2 {
     justify-content: space-between;
 }
 
+#dice-selection {
+    margin-bottom: 1.5em;
+}
+
+#round-counter-div {
+    @include flex-display(flex, column);
+    justify-content: center;
+    width: 20%;
+}
+
+#dice-colors {
+    @include flex-display(flex, row);
+    justify-content: center;
+}
+
 .dice-panel {
     @include flex-display(flex, column);
     align-items: center;
-    @include border-style(solid, 5px, 10px, black);
+    @include border-style(solid, 5px, 10px, $black);
     padding: 10px;
-    background-color: whitesmoke;
+    background-color: $white-background;
 }
 
 .dice {
     @include flex-display(flex, row);
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .dice-img {
-    width: 100px;
+    min-width: 85px;
+    max-width: 130px;
+    width: 33%;
 }
 
 .scores {
@@ -78,9 +131,22 @@ h2 {
     align-items: center;
 }
 
+.round-score {
+    margin-right: 15px;
+}
+
 #game-controls {
     @include flex-display(flex, row);
-    justify-content: center;
+    justify-content: space-around;
+    margin-top: 1em;
+    margin-bottom: 1em;
+    width: 50%
+}
+
+#text-tips {
+    @include flex-display(flex, row);
+    justify-content: space-around;
+    width: 80%;
 }
 
 .text-header {
@@ -88,12 +154,26 @@ h2 {
     justify-content: space-between;
 }
 
+#new-game, #roll-dice {
+    @include border-style(solid, 3px, 5px, $red);
+    padding: 5px;
+    width: 30%;
+}
+
+#how-to-play, #rules {
+    @include border-style(solid, 5px, 10px, $black);
+    padding: 10px;
+    background-color: $white-background;
+    margin: 15px;
+    width: 45%;
+}
+
 #result-pop-up {
     @include position(fixed, 0, 0);
     height: 100vh;
     width: 100vw;
     z-index: 1000;
-    background-color: rgba(245, 245, 245, 0.567);
+    background-color: rgba(245, 245, 245, 0.500);
     opacity: 0;
 }
 
@@ -101,6 +181,6 @@ h2 {
     @include position(absolute, 50%, 50%);
 	transform:translate(-50%, -50%);
     padding:10px;
-    @include border-style(solid, 5px, 10px, black);
-    background-color: whitesmoke;
+    @include border-style(solid, 5px, 10px, $red);
+    background-color: $white;
 }
