--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <h1>Lucky Dice</h1>
-        <b id="author">Mini Dice Game by Nicholas Chan</b>
+        <b id="author">Mini Game by Nicholas Chan</b>
     </header>
     <main>
         <section id="dice-selection">
@@ -108,7 +108,7 @@
                 <p id="player-final-score"></p>
                 <p id="computer-final-score"></p>
                 <p id="result-msg"></p>	
-                <button id="close-pop-up">Close</button>
+                <button id="close-pop-up"><b>Close</b></button>
             </div>
         </section>  
     </main>
