--- a/styles/index.css
+++ b/styles/index.css
@@ -137,7 +137,7 @@ b {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  width: 80%;
+  width: 65%;
 }
 
 .text-header {
@@ -178,6 +178,9 @@ b {
 }
 
 #pop-up-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -186,6 +189,20 @@ b {
   border: solid;
   border-width: 5px;
   border-radius: 10px;
+  border-color: black;
+  background-color: rgb(231, 231, 0);
+  width: 25%;
+}
+
+#pop-up-box > p {
+  width: 100%;
+}
+
+#close-pop-up {
+  border: solid;
+  border-width: 3px;
+  border-radius: 5px;
   border-color: rgb(159, 0, 0);
-  background-color: whitesmoke;
+  padding: 5px;
+  width: 50%;
 }
