--- a/views/index.html
+++ b/views/index.html
@@ -97,7 +97,7 @@
                     <li>The score of each player is tallied after a round.</li>
                     <li>After three rounds, the player with the highest total score wins.</li>
                     <li>If a player rolls a 1, their score for that round is 0.</li>
-                    <li>If a player rolls a pair, their score for that round is double the sum of the pair (e.g. 3 & 3 is 2(3 + 3) = 12)</li>
+                    <li>If a player rolls a pair, their score for that round is double the sum of the pair (e.g. 3 & 3 is 2 * (3 + 3) = 12)</li>
                     <li>Otherwise, the player's score for that round is the sum of their rolls.</li>
                 </ul>
             </div>
