--- a/styles/index.css
+++ b/styles/index.css
@@ -59,6 +59,7 @@ b {
   display: flex;
   flex-direction: column;
   align-items: center;
+  min-width: 600px;
 }
 
 #game-panels {
@@ -138,6 +139,7 @@ b {
   flex-direction: row;
   justify-content: space-around;
   width: 65%;
+  min-width: 600px;
 }
 
 .text-header {
